build two more components

--- a/index.html
+++ b/index.html
@@ -92,6 +92,42 @@
           </div>
         </div>
       </section>
+      <section class="container features">
+        <h2>Good design means good business</h2>
+        <div class="features-card">
+            <img src="./assets/images/smarthome.jpg" alt="preview of Smart home application dashboard" title="Smart home dashboard">
+            <span class="eyebrow">Full stack application</span>
+            <h3>Smart home dashboard</h3>
+        </div>
+        <div class="features-card">
+            <img src="./assets/images/onboard.png" alt="preview of Onboard application" title="Onboard application dashboard">
+            <span class="eyebrow">UX/UI design</span>
+            <h3>Onboard application</h3>
+        </div>
+        <div class="features-card">
+            <img src="./assets/images/booking.png" alt="preview of Booking system application" title="Booking system application">
+            <span class="eyebrow">Mobile application</span>
+            <h3>Booking System</h3>
+        </div>
+        <div class="features-card">
+            <img src="./assets/images/juice-product.png" alt="preview of Juice product homepage" title="Juice product homepage">
+            <span class="eyebrow">Front End application</span>
+            <h3>Juice product homepage</h3>
+        </div>
+        <a href="#">see more</a>
+      </section>
+      <section class="container teamboard">
+          <div class="teamboard-header">
+          <span class="eyebrow">Meet the team</span>
+          <h2>We are chilled and a laidback team</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="teamboard-pics">
+          <img src="./assets/images/person3.png" alt="Lady with a smile">
+          <img src="./assets/images/person1.png" alt="Guy wearing dark suite with a smile">
+          <img src="./assets/images/person2.png" alt="Guy wearing specs with a smile">
+          </div>
+      </section>
     </main>
   </body>
 </html>
